--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EthereumWallet",
+  "name": "omnee",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -18,16 +18,18 @@
   "dependencies": {
     "autobind-decorator": "2.1.0",
     "axios": "0.18.0",
+    "babel-preset-react-native": "^2.1.0",
     "ethers": "2.2.6",
     "identicon.js": "2.3.1",
+    "jshint": "^2.9.6",
     "mobx": "3.6.1",
     "mobx-react": "4.4.2",
     "moment": "2.21.0",
-    "native-base": "^2.7.0",
-    "npm": "^6.1.0",
+    "native-base": "^2.7.2",
+    "npm": "^6.2.0",
     "react": "16.2.0",
     "react-dom": "^16.4.1",
-    "react-native": "^0.54.0",
+    "react-native": "^0.55.4",
     "react-native-camera": "1.0.1",
     "react-native-local-mongodb": "^2.2.2",
     "react-native-modal": "5.2.0",
@@ -43,12 +45,11 @@
     "babel-jest": "22.4.1",
     "babel-plugin-module-resolver": "3.1.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-preset-react-native": "4.0.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "eslint-config-rallycoding": "3.2.0",
     "jest": "22.4.2",
-    "jsdom": "11.6.2",
+    "jsdom": "^11.12.0",
     "react-native-mock-render": "0.0.19",
     "react-test-renderer": "16.2.0",
     "sinon": "4.4.2"
