--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omnee",
+  "name": "Omnee",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -7,7 +7,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "test:watch": "jest --watch",
-    "android:build": "cd android && ./gradlew assembleDebug && cd .. && cp android/app/build/outputs/apk/debug/app-debug.apk EthereumWallet.apk",
+    "android:build": "cd android && ./gradlew assembleDebug && cd .. && cp android/app/build/outputs/apk/debug/app-debug.apk Omnee.apk",
     "android:bundle": "react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/build/intermediates/assets/debug/index.android.bundle --assets-dest ./android/app/build/intermediates/res/merged/debug",
     "android:clean": "cd android && ./gradlew clean && cd ..",
     "android:generate-apk": "npm run android:bundle && npm run android:build",
