--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react": "16.2.0",
     "react-dom": "^16.4.1",
     "react-native": "^0.55.4",
-    "react-native-camera": "1.0.1",
+    "react-native-camera": "^1.0.1",
     "react-native-local-mongodb": "^2.2.2",
     "react-native-modal": "5.2.0",
     "react-native-permissions": "1.1.1",
