--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,29 @@
 {
-  "presets": ["react-native"],
+  "presets": [
+    "@babel/env",
+    "react-native",
+    "@babel/preset-flow"
+  ],
   "plugins": [
-    ["module-resolver", {
-      "root": ["./src"],
-      "alias": {
-        "@assets": "./assets",
-        "@common": "./src/common",
-        "@components": "./src/components"
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
       }
-    }],
-    "transform-decorators-legacy"
+    ],
+    ["@babel/plugin-proposal-optional-chaining"],
+    [
+      "module-resolver",
+      {
+        "root": [
+          "./src"
+        ],
+        "alias": {
+          "@assets": "./assets",
+          "@common": "./src/common",
+          "@components": "./src/components"
+        }
+      }
+    ]
   ]
 }
