--- a/package.json
+++ b/package.json
@@ -18,20 +18,19 @@
   "dependencies": {
     "autobind-decorator": "2.1.0",
     "axios": "0.18.0",
-    "babel-preset-react-native": "^2.1.0",
     "ethers": "2.2.6",
     "identicon.js": "2.3.1",
     "jshint": "^2.9.6",
     "mobx": "3.6.1",
     "mobx-react": "4.4.2",
     "moment": "2.21.0",
-    "native-base": "^2.7.2",
-    "npm": "^6.2.0",
-    "react": "16.2.0",
-    "react-dom": "^16.4.1",
-    "react-native": "^0.55.4",
-    "react-native-camera": "^1.0.1",
-    "react-native-local-mongodb": "^2.2.2",
+    "native-base": "^2.8.1",
+    "npm": "^6.4.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-native": "^0.57.7",
+    "react-native-camera": "^1.5.1",
+    "react-native-local-mongodb": "^2.2.3",
     "react-native-modal": "5.2.0",
     "react-native-permissions": "1.1.1",
     "react-native-qrcode-svg": "5.0.6",
@@ -42,9 +41,14 @@
     "react-navigation": "1.4.0"
   },
   "devDependencies": {
-    "babel-jest": "22.4.1",
-    "babel-plugin-module-resolver": "3.1.0",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-preset-react-native": "^5.0.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "eslint-config-rallycoding": "3.2.0",
