--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "mobx": "3.6.1",
     "mobx-react": "4.4.2",
     "moment": "2.21.0",
-    "native-base": "^2.8.1",
+    "native-base": "^2.12.1",
     "npm": "^6.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-native": "^0.57.7",
+    "react-native": "^0.59.4",
     "react-native-camera": "^1.5.1",
+    "react-native-draggable-view": "0.0.6",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-local-mongodb": "^2.2.3",
     "react-native-modal": "5.2.0",
     "react-native-permissions": "1.1.1",
@@ -41,16 +43,16 @@
     "react-navigation": "1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-flow": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
     "babel-plugin-module-resolver": "^3.1.1",
-    "babel-preset-react-native": "^5.0.0",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
+    "babel-preset-react-native": "^5.0.2",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.0",
     "eslint-config-rallycoding": "3.2.0",
     "jest": "22.4.2",
     "jsdom": "^11.12.0",
